# unsaid

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml
src/unsaid/: __init__.py  cli.py  config.py  engine.py  format.py  session.py  ui.py
tests/: test_config.py  test_engine.py  test_engine_healing.py  test_engine_preamble.py  test_format.py  test_session.py  test_session_sample.py
